@@ -1,3 +1,9 @@
+2017-09-18  Henry Linjamäki  <henry.linjamaki@parmance.com>
+
+	* brigfrontend/brig-branch-inst-handler.cc: Fix brig code with
+	many function arguments crashes brig1. Fix only one work-item is
+	executed.
+
 2017-08-31  Henry Linjamäki  <henry.linjamaki@parmance.com>
 
 	* brig-lang.c: Added function attributes and their handlers.
